--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,21 +55,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    // coroutines for getting off the UI thread
     def coroutines = "1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
 
-    // retrofit for networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-
-    // moshi for parsing the JSON format
-    def moshi_version = "1.12.0"
-    implementation "com.squareup.moshi:moshi:$moshi_version"
-    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
-
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     def room_version = "2.5.0"
 
@@ -81,5 +73,8 @@ dependencies {
     implementation("androidx.room:room-ktx:$room_version")
 
     implementation 'com.google.code.gson:gson:2.9.0'
+
+
+    implementation 'com.nex3z:toggle-button-group:1.2.3'
 
 }
